# fastapiAPITemplate

./: .gitignore  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/: api_genarator.py  api_generator.py
app/api/endpoints/: router_register.py
app/api/endpoints/v1/: __init__.py  exemple.py  root.py
app/api/events/: lifespan.py
app/api/events/shutdown/: register_shutdown_events.py
app/api/events/startup/: register_startup_events.py
app/core/controllers/: exemple_controllers.py
app/core/database/: _basic_fields_models.py  database.py
app/core/dependencies/db_session/: sessions.py
app/core/endpoints/: router_register.py
app/core/endpoints/v1/: exemple.py  root.py
app/core/metadata/: metadata.py
app/core/models/: __init__.py  exemple_model.py
app/core/schemas/: exemple_schema.py  generic_responses_schemas.py  root_schemas.py
app/utils/cors/: register_cors.py
app/utils/exceptions_handlers/: register_exceptions_handlers.py
app/utils/exceptions_handlers/pydantic/: request_validation_error.py
app/utils/exceptions_handlers/sqlalchemy/: sqlalchemy_exception_handler.py
app/utils/logger/: configure_logger.py  http_logger.py
configuration/: .secrets.toml  configs.py  settings.toml
docker/: Dockerfile.api  Dockerfile.db  create-databases.sh  dev.env  prod.env  test.env
docker/api/: Dockerfile.api
docs/: README.md
migrations/: env.py
migrations/versions/: 5f5552b9a1a3_added_exemple_table.py  846940af6b85_added_exemple_table.py  bd55d673bfb4_.py
tests/: conftest.py
tests/integrations_tests/: test_exemple.py
(+4 files in other folders)
