[tool.poetry]
name = "fastapiapitemplate"
version = "0.1.0"
description = ""
authors = ["Lucas Praciano <luskcct@gmail.com>"]
documentation = "https://github.com/lspraciano/fastapiAPITemplate"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
dynaconf = "^3.2.6"
psycopg2 = "^2.9.10"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
httpx = "^0.28.1"
uvicorn = "^0.34.0"
toml = "^0.10.2"
asgi-lifespan = "^2.1.0"
pytest-asyncio = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = "tests.py test_*.py *_tests.py"
asyncio_mode = "auto"
filterwarnings = [
    "ignore",
    "ignore:.*U.*mode is deprecated:DeprecationWarning"
]